#182 hibernate 7.4.4, fat-jar scanning